Added scripts for Solo + SCRIPTS.md
Signed-off-by: Ivan Malygin <ivan@swirldslabs.com>